tp2/api/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: api 
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        seLinuxOptions: {}
      containers:
      - name: api 
        image: registry.gitlab.com/takima-school/images/cdb/api:latest 
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            memory: "192Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "2"
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080 
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080 
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: empty-dir 
            mountPath: /tmp/
      imagePullSecrets:
        - name: takima-school-registry
      volumes:
        - name: empty-dir
          emptyDir: {}
